     with bzr merge-into.

   * Implement ListBranchingScheme.is_branch_parent(). (#144357)

   * Use revprop lists rather than just commit message when committing.

   * The version of bzr-rebase is now checked before it's being used.

   * Handle checks of modified children correctly when path is the root 
     in LogWalker.find_latest_change().

  BUG FIXES

   * Fix compatibility with 0.92.

   * Handle long file names with unicode characters correctly on 
     python2.4 (#129334)

   * Give proper warning message when running 'bzr svn-branching-scheme' on 
     something that is not a Subversion repository. (#145159)

   * Give proper warning message when running 'bzr svn-import' on 
     something that is not a Subversion repository. 

   * Support svn+ hack when committing in bound branches. (#150699)

   * Encode = in list branching scheme names (unusable in Subversion property 
     names). (#125751)

   * Fix 'bzr checkout --lightweight' for http and https branches. 
     (#144032)

   * Don't print traceback when raising errors about bzr versions.

   * Show proper exception when lightweight checkout is out of date.

  DOCUMENTATION

   * Add simple FAQ file. (#144388)

bzr-svn 0.4.3	2007-09-15
 
  PERFORMANCE

   * Avoid extra RA connection in LogWalker if it isn't going to be used.

  BUG FIXES

   * Fix determination of relative URLs in SvnRaTransport._request_path(). 
     (#139020)

   * Mark as compatible with Bazaar 0.91.

   * Use write groups in fetch as required by the packs branch.

   * Handle pushing merges of which LHS parent is older revision of 
     branch path.

  INTERNALS

   * Track moving parents correctly in follow_path().

   * Implement SvnWorkingTreeDir.needs_format_conversion().

bzr-svn 0.4.2	2007-09-09

  BUG FIXES

   * Fix regression that prevented the "svn+" prefix trick from working.

   * Export version information so the version is displayed properly 
     in "bzr plugins".
