@@ -40,6 +40,12 @@ upgrade the repository, run:
 
   $ bzr upgrade --dirstate-with-subtree
 
+or, if you would like to try the experimental packs format:
+
+::
+
+ $ bzr upgrade --experimental-subtree 
+
 ===========================================================================
 Pushing a branch that didn't exist in Subversion yet with `bzr push` fails.
 ===========================================================================
