@@ -73,6 +73,7 @@ class RevisionBuildEditor(svn.delta.Editor):
         self._svn_revprops = svn_revprops
         self._premature_deletes = set()
         self.pool = Pool()
+        self.target.start_write_group()
 
     def _get_revision(self, revid):
         """Creates the revision object.
@@ -338,7 +339,6 @@ class RevisionBuildEditor(svn.delta.Editor):
         rev.inventory_sha1 = osutils.sha_string(
             bzrlib.xml5.serializer_v5.write_inventory_to_string(
                 self.inventory))
-        self.target.start_write_group()
         try:
             self.target.add_revision(self.revid, rev, self.inventory)
             self.target.commit_write_group()
