@@ -31,6 +31,8 @@ bzr-svn 0.4.4	UNRELEASED
 
    * Fix compatibility with 0.92.
 
+   * Fix compatibility with packs.
+
    * Handle long file names with unicode characters correctly on 
      python2.4 (#129334)
 
